5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1734_2508.log
== SUBMITION (2019-05-15 17:51:04) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
termo=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa=fa+2
		fe=fe+2
		fi=fi+2
		i=i+1
	print(round(soma,8))
-- EXECUTION TIME:
0.156068
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 13
    fa=fa+2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:51:07) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
termo=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa=fa+2
		fe=fe+2
		fi=fi+2
		i=i+1
	print(round(soma,8))
-- EXECUTION TIME:
0.219864
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 13
    fa=fa+2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:51:11) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
termo=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa=fa+2
		fe=fe+2
		fi=fi+2
		i=i+1
	print(round(soma,8))
-- ERROR:
File "XXXX", line 13
    fa=fa+2
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:51:51) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
termo=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa=fa + 2
		fe=fe + 2
		fi=fi + 2
		i=i+1
	print(round(soma,8))
-- ERROR:
File "XXXX", line 13
    fa=fa + 2
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:52:43) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
termo=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa=fa + 2
		fe=fe + 2
		fi=fi + 2
		i=i+1
	print(round(soma,8))
-- ERROR:
File "XXXX", line 13
    fa=fa + 2
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:53:15) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
termo=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa=fa + 2
		fe=fe + 2
		fi=fi + 2
		i=i+1
	print(round(soma,8))
-- EXECUTION TIME:
0.200332
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 13
    fa=fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:53:26) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
termo=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa=fa + 2
		fe=fe + 2
		fi=fi + 2
		i=i+1
print(round(soma,8))
-- EXECUTION TIME:
0.15404
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 13
    fa=fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:53:29) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
termo=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa=fa + 2
		fe=fe + 2
		fi=fi + 2
		i=i+1
print(round(soma,8))
-- EXECUTION TIME:
0.177119
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 13
    fa=fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:53:32) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
termo=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa=fa + 2
		fe=fe + 2
		fi=fi + 2
		i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 13
    fa=fa + 2
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:54:04) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
termo=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa=fa + 2
		fe=fe + 2
		fi=fi + 2
		i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 13
    fa=fa + 2
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:54:38) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
termo=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
			fa=fa + 2
			fe=fe + 2
			fi=fi + 2
			i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 13
    fa=fa + 2
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:59:08) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
termo=0
while(i+1<npi):
	sinal=(-1)**i
	soma= soma+sinal*((4/(fa*fe*fi))
	fa=fa + 2
	fe=fe + 2
	fi=fi + 2
	i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 10
    fa=fa + 2
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:59:12) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
termo=0
while(i+1<npi):
	sinal=(-1)**i
	soma= soma+sinal*((4/(fa*fe*fi))
	fa=fa + 2
	fe=fe + 2
	fi=fi + 2
	i=i+1
print(round(soma,8))
-- EXECUTION TIME:
0.235103
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 10
    fa=fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 21:48:38) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
termo=0
while(i+1<npi):
	sinal=(-1)**i
	soma= soma+sinal*((4/(fa*fe*fi))
	fa=fa + 2
	fe=fe + 2
	fi=fi + 2
	i=i+1
print(round(soma,8))
-- EXECUTION TIME:
0.15547
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 10
    fa=fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 21:48:39) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
termo=0
while(i+1<npi):
	sinal=(-1)**i
	soma= soma+sinal*((4/(fa*fe*fi))
	fa=fa + 2
	fe=fe + 2
	fi=fi + 2
	i=i+1
print(round(soma,8))
-- EXECUTION TIME:
0.206147
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 10
    fa=fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 21:48:43) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
termo=0
while(i+1<npi):
	sinal=(-1)**i
	soma= soma+sinal*((4/(fa*fe*fi))
	fa=fa + 2
	fe=fe + 2
	fi=fi + 2
	i=i+1
print(round(soma,8))
-- EXECUTION TIME:
0.213478
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 10
    fa=fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 21:48:43) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
termo=0
while(i+1<npi):
	sinal=(-1)**i
	soma= soma+sinal*((4/(fa*fe*fi))
	fa=fa + 2
	fe=fe + 2
	fi=fi + 2
	i=i+1
print(round(soma,8))
-- EXECUTION TIME:
0.238353
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 10
    fa=fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 21:48:46) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
termo=0
while(i+1<npi):
	sinal=(-1)**i
	soma= soma+sinal*((4/(fa*fe*fi))
	fa=fa + 2
	fe=fe + 2
	fi=fi + 2
	i=i+1
print(round(soma,8))
-- EXECUTION TIME:
0.232641
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 10
    fa=fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 21:48:46) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
termo=0
while(i+1<npi):
	sinal=(-1)**i
	soma= soma+sinal*((4/(fa*fe*fi))
	fa=fa + 2
	fe=fe + 2
	fi=fi + 2
	i=i+1
print(round(soma,8))
-- EXECUTION TIME:
0.160692
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 10
    fa=fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 21:48:48) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
termo=0
while(i+1<npi):
	sinal=(-1)**i
	soma= soma+sinal*((4/(fa*fe*fi))
	fa=fa + 2
	fe=fe + 2
	fi=fi + 2
	i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 10
    fa=fa + 2
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:35:01) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
termo=0
if(npi==1):
	print("3")
while(i+1<npi):
	sinal=(-1)**i
	soma= soma+sinal*((4/(fa*fe*fi))
	fa=fa + 2
	fe=fe + 2
	fi=fi + 2
	i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 12
    fa=fa + 2
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:35:49) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
while(i+1<npi):
	sinal=(-1)**i
	soma= soma+sinal*((4/(fa*fe*fi))
	fa=fa + 2
	fe=fe + 2
	fi=fi + 2
	i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 12
    fa=fa + 2
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:36:27) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
while(i+1<npi):
	sinal=(-1)**i
	soma= soma+sinal*((4/(fa*fe*fi))
	fa=fa + 2
	fe=fe + 2
	fi=fi + 2
	i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 10
    while(i+1<npi):
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:37:27) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa=fa + 2
		fe=fe + 2
		fi=fi + 2
		i=i+1
print(round(3+soma,8))
-- ERROR:
File "XXXX", line 13
    fa=fa + 2
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:37:33) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa=fa + 2
		fe=fe + 2
		fi=fi + 2
		i=i+1
print(round(3+soma,8))
-- ERROR:
File "XXXX", line 13
    fa=fa + 2
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:37:36) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa=fa + 2
		fe=fe + 2
		fi=fi + 2
		i=i+1
print(round(3+soma,8))
-- ERROR:
File "XXXX", line 13
    fa=fa + 2
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:37:57) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		i=i+1
print(round(3+soma,8))
-- ERROR:
File "XXXX", line 13
    i=i+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:38:05) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		i=i+1
print(round(3+soma,8))
-- ERROR:
File "XXXX", line 13
    i=i+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:38:25) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		i=i+1
print(round(3+soma,8))
-- ERROR:
File "XXXX", line 13
    i=i+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:38:28) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		i=i+1
print(round(3+soma,8))
-- EXECUTION TIME:
0.171806
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 13
    i=i+1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:59:18) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa=fa+2
		fe=fe+2
		fi=fi+2
		i=i+1
print(round(3+soma,8))
-- ERROR:
File "XXXX", line 13
    fa=fa+2
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:00:04) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa=fa+2
		fe=fe+2
		fi=fi+2
		i=i+1
print(round(3+soma,8))
-- ERROR:
File "XXXX", line 13
    fa=fa+2
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:01:20) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa= fa + 2
		fe= fe + 2
		fi= fi + 2
		i=i+1
print(round(3+soma,8))
-- ERROR:
File "XXXX", line 13
    fa= fa + 2
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:01:50) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa= fa + 2
		fe= fe + 2
		fi= fi + 2
		i=i+1
	print(round(3+soma,8))
-- ERROR:
File "XXXX", line 13
    fa= fa + 2
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:47:47) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa= fa + 2
		fe= fe + 2
		fi= fi + 2
		i=i+1
	print(round(3+soma,8))
-- EXECUTION TIME:
0.166848
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 13
    fa= fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:47:49) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa= fa + 2
		fe= fe + 2
		fi= fi + 2
		i=i+1
	print(round(3+soma,8))
-- EXECUTION TIME:
0.14179
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 13
    fa= fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:47:50) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa= fa + 2
		fe= fe + 2
		fi= fi + 2
		i=i+1
	print(round(3+soma,8))
-- EXECUTION TIME:
0.282947
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 13
    fa= fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:47:50) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa= fa + 2
		fe= fe + 2
		fi= fi + 2
		i=i+1
	print(round(3+soma,8))
-- EXECUTION TIME:
0.442254
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1734/2508/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:47:50) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa= fa + 2
		fe= fe + 2
		fi= fi + 2
		i=i+1
	print(round(3+soma,8))
-- EXECUTION TIME:
0.489143
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 13
    fa= fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:47:50) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa= fa + 2
		fe= fe + 2
		fi= fi + 2
		i=i+1
	print(round(3+soma,8))
-- EXECUTION TIME:
0.578568
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 13
    fa= fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:47:50) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa= fa + 2
		fe= fe + 2
		fi= fi + 2
		i=i+1
	print(round(3+soma,8))
-- EXECUTION TIME:
0.67487
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 13
    fa= fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:47:50) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa= fa + 2
		fe= fe + 2
		fi= fi + 2
		i=i+1
	print(round(3+soma,8))
-- EXECUTION TIME:
0.578368
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 13
    fa= fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:47:51) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa= fa + 2
		fe= fe + 2
		fi= fi + 2
		i=i+1
	print(round(3+soma,8))
-- EXECUTION TIME:
0.206334
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 13
    fa= fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:47:52) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa= fa + 2
		fe= fe + 2
		fi= fi + 2
		i=i+1
	print(round(3+soma,8))
-- EXECUTION TIME:
0.195442
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 13
    fa= fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:47:52) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa= fa + 2
		fe= fe + 2
		fi= fi + 2
		i=i+1
	print(round(3+soma,8))
-- EXECUTION TIME:
0.456045
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 13
    fa= fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:47:52) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa= fa + 2
		fe= fe + 2
		fi= fi + 2
		i=i+1
	print(round(3+soma,8))
-- EXECUTION TIME:
0.430606
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 13
    fa= fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:47:54) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa= fa + 2
		fe= fe + 2
		fi= fi + 2
		i=i+1
	print(round(3+soma,8))
-- EXECUTION TIME:
0.148388
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 13
    fa= fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:47:55) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa= fa + 2
		fe= fe + 2
		fi= fi + 2
		i=i+1
	print(round(3+soma,8))
-- EXECUTION TIME:
0.143157
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 13
    fa= fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:47:57) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa= fa + 2
		fe= fe + 2
		fi= fi + 2
		i=i+1
	print(round(3+soma,8))
-- EXECUTION TIME:
0.323475
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 13
    fa= fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:47:57) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa= fa + 2
		fe= fe + 2
		fi= fi + 2
		i=i+1
	print(round(3+soma,8))
-- EXECUTION TIME:
0.243379
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 13
    fa= fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:47:57) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa= fa + 2
		fe= fe + 2
		fi= fi + 2
		i=i+1
	print(round(3+soma,8))
-- EXECUTION TIME:
0.409487
-- ERROR:
  File "/home/codebench/codes/1734/2508/main.py", line 13
    fa= fa + 2
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:47:58) 
-- CODE:
npi=int(input("digite o numero:"))
fa=2
fe=3
fi=4
i=0
soma=0
if(npi==1):
	print("3")
else:
	while(i+1<npi):
		sinal=(-1)**i
		soma= soma+sinal*((4/(fa*fe*fi))
		fa= fa + 2
		fe= fe + 2
		fi= fi + 2
		i=i+1
	print(round(3+soma,8))
-- EXECUTION TIME:
0.274264
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1734/2508/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
